test_regress/t/t_class_unsup_bad.out
%Error: t/t_class_unsup_bad.v:6: Unsupported: virtual interface
virtual interface vi_t vi;
^~~~~~~
%Error: t/t_class_unsup_bad.v:7: Unsupported: virtual data type
virtual vi_t vi2;
^~~~~~~
%Error: t/t_class_unsup_bad.v:13: Unsupported: class parameters
   localparam LOCPAR = 10;
                         ^
%Error: t/t_class_unsup_bad.v:24: Unsupported: virtual class member qualifier
   virtual function void func_virtual; endfunction
   ^~~~~~~
%Error: t/t_class_unsup_bad.v:25: Unsupported: pure virtual class method
   pure virtual function void func_pure_virtual;
   ^~~~
%Error: t/t_class_unsup_bad.v:26: Unsupported: automatic class member qualifier
   automatic function void func_automatic; endfunction
   ^~~~~~~~~
%Error: t/t_class_unsup_bad.v:27: Unsupported: const class member qualifier
   const function void func_const; endfunction
   ^~~~~
%Error: t/t_class_unsup_bad.v:28: Unsupported: extern class method prototype
   extern task exttask;
   ^~~~~~
%Error: t/t_class_unsup_bad.v:31: Unsupported: virtual classes
virtual class VC;
^~~~~~~
%Error: Exiting due to
